# slambook2homework

./: .gitignore  README.md
NURBS-py/: Surface.py  bSpline.py
ch3/: main.cpp  out  prof.md
ch5/: homework.md
ch6/: homeword.md
ch6/.cache/clangd/index/: gaussNewton.cpp.58EA463663AA1626.idx
ch6/ceres/: CMakeCache.txt  CMakeLists.txt  Makefile  ceresCurveFitting.cpp  cmake_install.cmake  compile_commands.json
ch6/ceres/.cache/clangd/index/: ceresCurveFitting.cpp.61917D7F0591FCD4.idx
ch6/g2o/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  fitting  g2oCurveFitting.cpp
ch6/g2o/.cache/clangd/index/: g2oCurveFitting.cpp.17588BE0F9EC6218.idx
ch6/gaussNewton/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  gaussNewton  gaussNewton.cpp
ch6/gaussNewton/.cache/clangd/index/: gaussNewton.cpp.4902445A8D67D252.idx
ch7/: main  main.cpp
ch7ANDch8/: note.md
ch9ANDch10/: note.md
math/: svdAndJacobian.md
pcl/: pointcloud.txt
pcl/.cache/clangd/index/: main.cpp.8F06E4A0431E13C2.idx
pcl/filers/.cache/clangd/index/: main.cpp.D1D0D6D20459F7DB.idx
pcl/filers/PassThrough/: CMakeLists.txt  main.cpp
pcl/filers/PassThrough/.cache/clangd/index/: main.cpp.9765DC2973B59016.idx
pcl/filers/Projecting/: CMakeLists.txt  main.cpp
pcl/filers/Projecting/.cache/clangd/index/: main.cpp.A49F9A044DAC4155.idx
pcl/filers/StatisticalOutlierRemoval/: CMakeLists.txt  main.cpp
pcl/filers/StatisticalOutlierRemoval/.cache/clangd/index/: main.cpp.1E26DF8CC20A54CC.idx
pcl/filers/VoxelGrid/: CMakeLists.txt  main.cpp
pcl/filers/VoxelGrid/.cache/clangd/index/: main.cpp.C8569B55632D50B7.idx
pcl/registration/ndt/: CMakeLists.txt  main.cpp
pcl/registration/ndt/.cache/clangd/index/: main.cpp.9C6FAFB65CF641C9.idx
pcl/test/: CMakeLists.txt  main.cpp
pcl/test/.cache/clangd/index/: main.cpp.E905D0AB5314CA2A.idx
